# image_upscaling

./: Cargo.toml  Readme.md
src/: content_analysis.rs  content_type.rs  lib.rs  main.rs
src/algorithms/: fast.rs  image.rs  instant.rs  medium.rs  mod.rs  slow.rs  upscale_tier.rs  upscaler.rs
src/event_chain_pipeline/: analyze_content_event.rs  bicubic_event.rs  bilinear_event.rs  detect_quality_issues_event.rs  iterative_back_projection_event.rs  lanczos_event.rs  load_image_event.rs  mod.rs  nearest_neighbor_event.rs  pipeline_config.rs  postprocess_image_event.rs  preprocess_image_event.rs  save_image_event.rs  upscale_config.rs  upscale_with_strategy_event.rs  validate_image_event.rs
