[package]
name = "image_upscaling"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "High-performance image upscaling algorithms from instant to AI-quality"
repository = "https://github.com/RPDevJesco/image_upscaling"
keywords = ["image", "upscaling", "interpolation", "super-resolution"]
categories = ["multimedia::images", "algorithms", "graphics"]

[dependencies]
event_chains = { version = "0.2.1", features = ["middleware", "adversarial"] }
image = "0.25.9"
